--- a/client/app/src/main/res/values/themes.xml
+++ b/client/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.SafeChat" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.SafeChat" parent="Theme.AppCompat.DayNight">
         <item name="android:statusBarColor">@color/purple_700</item>
     </style>
 </resources>
